@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T16:38:49Z",
+  "timestamp" : "2022-05-12T02:04:02Z",
   "count_outdated" : 118,
   "uniques_outdated" : 39,
-  "count" : 142,
-  "uniques" : 57,
+  "count" : 144,
+  "uniques" : 58,
   "clones" : [
     {
       "timestamp": "2022-04-29T00:00:00Z",
@@ -81,6 +81,13 @@
       "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
