@@ -1,5 +1,5 @@
 {
-  "count": 24,
+  "count": 26,
   "uniques": 8,
   "clones": [
     {
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
