@@ -1,3 +1,9 @@
+2022-05-12T02:04:02Z:
+* notice: last 14d: all unq: 26 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 118 39 / 142 57
+* notice: next accum: outdated-all outdated-unq / all unq: 118 39 / 144 58
+* notice: prev json diff / prev day diff: unq all: +1 +2 -0 -0 / +1 +2 -0 -0
+
 2022-05-10T16:38:49Z:
 * notice: last 14d: all unq: 24 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 118 39 / 141 57
